src/templates/blocks/header/header.styl
.header
  padding 23px
  display flex
  justify-content space-between
  align-items center

  +above(800px)
    padding 40px

  &__logo
    width 125px

    +above(700px)
      width 200px
.menu
  position fixed
  right 0
  top 70px
  width 100%
  height 100%
  overflow hidden
  pointer-events none
  z-index 100

  +above(600px)
    height auto
    width auto
    top 23px

  +above(700px)
    top 30px

  +above(800px)
    top 47px

  &--visible
    pointer-events auto

.app-menu
  padding-left 23px
  list-style none
  position relative
  width 100%
  height 100%
  transform translateX(-103%)
  display flex
  flex-direction column
  font-size 40px
  background-color #232330
  will-change transform
  z-index 160
  pointer-events auto

  +above(600px)
    padding-left 0
    margin 0
    height auto
    padding-right 23px
    font-size 20px
    flex-direction row
    justify-content flex-end
    transform none

  +above(800px)
    padding-right 40px

  &__item
    padding 5px 0
    border-top 1px solid rgba(255, 255, 255, 0.2)

    +above(600px)
      padding 0
      border-top none

    &:last-child
      display none

      +above(600px)
        display inline-block

    &:not(:last-child)
      +above(600px)
        margin-right 20px

.menu--visible .app-menu
  transform none

.menu--animatable .app-menu
  transition all 130ms ease-in

.menu--visible.menu--animatable  .app-menu
  transition all 330ms ease-out

.menu-icon
  position relative
  width 20px
  height 17px
  display flex
  flex-direction column
  justify-content space-between
  cursor pointer

  +above(600px)
    display none

  &__item
    width 100%
    height 3px
    background-color #fff
    border-radius 3px

.menu--visible + .header
  .menu-icon

    &__item
      position absolute
      top 7px
      &:first-child
        left 0
        transform rotate(45deg)
      &:last-child
        right 0
        transform rotate(-45deg)
      &:nth-child(2)
        display none

